# OpenNurbsFit

./: CMakeLists.txt  License.txt  OpenNurbsFitConfig.cmake.in  OpenNurbsFitConfigVersion.cmake.in  README.txt  doxyfile  opennurbs.cmake  suitesparse.cmake
NurbsFit/: CMakeLists.txt  CMakeLists.txt~  curve.cpp  curve.h  fitting_surface_depth.h~  open_curve.cpp  open_curve.h  patch.cpp  patch.h  surface.cpp  surface.h  surface_depth.cpp  surface_depth.cpp~  surface_depth.h
OpenNurbs/: CMakeLists.txt  opennurbs_zlib.h
TomGine/: CMakeLists.txt  GLDCWindow.cpp  GLWindow.h  GLXCBWindow.cpp  headers.h  tgCamera.cpp  tgCamera.h  tgEngine.cpp  tgEngine.h  tgError.cpp  tgError.h  tgFrameBufferObject.cpp  tgFrameBufferObject.h  tgModel.cpp  tgModel.h  tgPlot2D.cpp  tgRenderModel.cpp  tgRenderModel.h  tgTextureModel.cpp  tgTextureModel.h  tgTimer.h  tgTomGine.h  tgTomGineThread.cpp  tgTomGineThread.h
apps/: CMakeLists.txt  example_fitpatch.cpp  example_opencurve2d.cpp  example_surface_depth.cpp  triangulation.cpp  triangulation.h
